# eightton-policy

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
k8s/: deployment.yaml  ingress.yaml
policies/: axmp-ai-agent-studio.yaml  eightton-backend.yaml
src/eightton/: __init__.py  config.py  main.py
src/eightton/api/: __init__.py  policy.py
src/eightton/entity/: __init__.py  base.py  policy_check.py
src/eightton/repository/: __init__.py  base.py  policy_check_repository.py
src/eightton/service/: policy_service.py
src/eightton/util/: database.py
